Use a work around to solve the issue of result-bar extending beyond 100% width, incomplete yet because larger input will cause problem. Must find a way to create an overflow (scroll bar) instead of minizing the space that one cell can expand

--- a/core/new-gui/src/app/workspace/component/result-view/result-view.component.scss
+++ b/core/new-gui/src/app/workspace/component/result-view/result-view.component.scss
@@ -1,5 +1,31 @@
 .texera-workspace-result-view-container {
-    width: 100%;
-    height: 100%;
     border-style: solid;
+    width: 100%;
+}
+
+#result-table {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.mat-table {
+    display: table;
+    width: 100%;
+
+    > .mat-header-row, > .mat-row {
+        display: table-row;
+        border: none;
+
+        > .mat-header-cell, > .mat-cell {
+            display: table-cell;
+            height: 48px;
+            padding-left: 10px;
+            vertical-align: middle;
+            max-width: 70px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+        }
+    }
 }
